# wasmtime

./: Cargo.toml  build.rs
.github/workflows/: main.yml
cranelift/codegen/meta/src/: srcgen.rs
cranelift/codegen/meta/src/cdsl/: isa.rs
cranelift/codegen/meta/src/shared/: instructions.rs
cranelift/codegen/src/ir/: libcall.rs
cranelift/codegen/src/isa/aarch64/: lower.rs  lower_inst.rs
cranelift/codegen/src/isa/s390x/: abi.rs
cranelift/codegen/src/isa/x64/: abi.rs  lower.rs
cranelift/codegen/src/machinst/: abi_impl.rs  lower.rs
cranelift/filetests/filetests/isa/aarch64/: amodes.clif  bitops.clif  condbr.clif  extend-op.clif  heap_addr.clif  shift-rotate.clif
cranelift/filetests/src/: function_runner.rs
cranelift/frontend/src/: frontend.rs
cranelift/fuzzgen/src/: lib.rs
cranelift/interpreter/src/: step.rs
cranelift/jit/src/: backend.rs
cranelift/wasm/src/: code_translator.rs  func_translator.rs
crates/environ/src/: vmoffsets.rs
crates/fuzzing/src/oracles/: dummy.rs
crates/jit/: Cargo.toml
crates/jit-debug/: Cargo.toml
crates/jit-debug/src/: perf_jitdump.rs
crates/profiling/: Cargo.toml
crates/profiling/src/: jitdump_linux.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: export.rs  instance.rs  lib.rs  memory.rs  mmap.rs  traphandlers.rs  vmcontext.rs
crates/runtime/src/instance/allocator/: pooling.rs
crates/runtime/src/traphandlers/: unix.rs
crates/wasi-c/sandboxed-system-primitives/include/: wasmtime_ssp.h
crates/wasi-c/sandboxed-system-primitives/src/: rights.h
crates/wasi-common/cap-std-sync/: Cargo.toml
crates/wasi-common/src/: virtfs.rs
crates/wasi-common/src/snapshots/: preview_1.rs  wasi_snapshot_preview1.rs
crates/wasi-common/tokio/: Cargo.toml
crates/wasi-nn/: Cargo.toml
crates/wast/src/: wast.rs
docs/: introduction.md
scripts/: publish.rs
tests/all/: async_functions.rs  instance.rs  limits.rs  memory.rs  traps.rs  wast.rs
(+7 files in other folders)
