[package]
name = "wasmtime-jit-debug"
version = "0.25.0"
authors = ["The Wasmtime Project Developers"]
description = "JIT debug interfaces support for Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["development-tools::debugging"]
keywords = ["gdb", "jit"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = {version = "1.3.0", optional = true }
libc = { version = "0.2.60", default-features = false, optional = true }
scroll = { version = "0.10.1", features = ["derive"], optional = true }

[badges]
maintenance = { status = "actively-developed" }

[features]
gdb_jit_int = ["lazy_static"]
perf_jitdump = ["scroll", "libc"]
