[package]
name = "wasmtime-profiling"
version = "0.25.0"
authors = ["The Wasmtime Project Developers"]
description = "Runtime performance profiling support for Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
gimli = { version = "0.23.0", optional = true }
lazy_static = "1.4"
libc = { version = "0.2.60", default-features = false }
target-lexicon = "0.11.0"
wasmtime-environ = { path = "../environ", version = "0.25.0" }
wasmtime-runtime = { path = "../runtime", version = "0.25.0" }
wasmtime-jit-debug = { path = "../jit-debug", version = "0.25.0", features = ["perf_jitdump"] }
ittapi-rs = { version = "0.1.5", optional = true }

[dependencies.object]
version = "0.23.0"
optional = true
default-features = false
features = ['read_core', 'elf', 'std']

[badges]
maintenance = { status = "actively-developed" }

[features]
jitdump = ['object', 'gimli']
vtune = ['ittapi-rs']
